Fixed parsing for interface files

--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,11 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="java-cup-11a-runtime.jar"/>
-	<classpathentry kind="lib" path="cs4120-pa7.jar"/>
+	<classpathentry kind="lib" path="cs4120-pa7.jar">
+		<accessrules>
+			<accessrule kind="accessible" pattern="polyglot"/>
+			<accessrule kind="nonaccessible" pattern="edu"/>
+		</accessrules>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
